crates/torrentctl/src/ui/snapshots/torrentctl__ui__tests__shell_80x24.snap
---
source: crates/torrentctl/src/ui/mod.rs
expression: screen
---
 1 Dashboard │ 2 Torrents │ 3 Profiles │ 4 Pool           ● live  token operator










                                   ⠋ loading…











R reload config  ? help  q quit
